Kubernetes/cicd/jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: cicd
spec:
  replicas: 1

  selector:
    matchLabels:
      app: jenkins

  template:
    metadata:
      labels:
        app: jenkins

    spec:
      serviceAccountName: jenkins

      containers:
        - name: jenkins
          image: jenkins/jenkins:lts-jdk21

          ports:
            - name: http
              containerPort: 8080

            - name: agent
              containerPort: 50000

          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home
      volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkins-home
